[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
poem = { version = "1.3.58" }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres"] }
poem-openapi = { version = "3.0.5", features = ["openapi-explorer"] }
